# pyrs

./: .gitignore  Cargo.toml  Makefile  PLAN.md  README.md  SPECIFICATIONS.md  run.sh  rust-toolchain.toml
.github/: dependabot.yml
.github/actions/setup-pyrs/: action.yml
.github/workflows/: bench.yml  ci.yml  docs.yml  release.yml
benchmarks/: fib.py  listcomp.py  mandelbrot.py  matmul.py  nbody.py  primes.py  run.sh  sort.py  strings.py
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  main.rs  modules.rs
cli/tests/: e2e.rs
codegen/: Cargo.toml  build.rs
codegen/runtime/: runtime.c
codegen/shim/: .clang-format  CMakeLists.txt
codegen/shim/src/: lib.cc  lib.hh
codegen/src/: emit.rs  lib.rs
common/: Cargo.toml
common/src/: lib.rs
docs/: EXTENDING.md  GUIDE.md  PRIMITIVES.md  SPECIFICATIONS.md
docs/superpowers/plans/: 2026-07-16-core-language-roadmap.md
examples/: collatz.py  containers.py  fib.py  fileio.py  fizzbuzz.py  floats.py  primes.py  sort.py  strings.py
examples/modules/: geometry.py  shapes.py
ir/: Cargo.toml
ir/src/: lib.rs
lexer/: Cargo.toml
lexer/src/: lib.rs
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs
pyrs/: main.py
semantic/: Cargo.toml
semantic/src/: lib.rs
src/: lexer.rs  main.rs
stdlib/: json.py  math.py
stdlib/os/: __init__.py  path.py
