[package]
name = "pyrs"
version = "0.24.0"
edition = "2024"

[dependencies]
common = { path="../common" }
lexer = { path="../lexer" }
parser = { path="../parser" }
semantic = { path="../semantic" }
ir = { path="../ir" }
codegen = { path="../codegen" }

clap = { version = "4.6.0", default-features = false, features = ["std", "derive", "help", "usage"] }
